edit/edit.css
/* ... */
.resize-grip:after {
  content: "";
  bottom: 2px;
  left: 0;
  right: 0;
  margin: 0 8px;
  display: block;
  position: absolute;
  border-top-width: 2px;
  border-top-style: dotted;
  border-top-color: inherit;
}
/* applies-to */
.applies-to {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
}
.applies-to.error {
  background-color: #f002;
  border-color: #f008;
}
.applies-to label {
  font-size: 0;
  padding: 0;
  line-height: var(--input-height);
  height: var(--input-height);
}
.sectioned .applies-to label {
  width: var(--padL);
  text-align: center;
}
.compact-layout .applies-to label {
  display: none;
}
.applies-to ul {
  flex: auto;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}
.applies-to li {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  align-items: center;
}
.applies-to,
.applies-to li:nth-last-child(n + 2) {
  margin-bottom: var(--target-gapY);
}
.applies-to li.applies-to-everything {
  align-items: unset;
  line-height: var(--input-height);
}
.applies-to select:not(:focus) {
  background-color: var(--c99);
  border-color: var(--c85);
}
.applies-to input {
  border-color: var(--c85);
}
.applies-to .select-wrapper {
  margin-right: .5em;
}
.applies-to li .add-applies-to:first-child {
  margin-left: 1rem;
}
.applies-to li .applies-value-wrapper {
  flex-grow: 1;
  display: flex;
}
.applies-to[data-all] .applies-value-wrapper {
  display: none;
}
.applies-to li .applies-value {
  flex-grow: 1;
  padding-left: 0.2rem;
}
.applies-to img {
  vertical-align: bottom;
}
.add-applies-to,
.remove-applies-to {
  font-size: 0;
  height: var(--input-height);
  width: var(--input-height);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}
.remove-applies-to {
  margin-left: 4px;
}
.add-applies-to i,
.remove-applies-to i {
  pointer-events: none;
  color: var(--c60);
  height: 12px;
  font-size: 12px;
}
.add-applies-to:hover i,
.remove-applies-to:hover i {
  pointer-events: none;
  color: var(--fg);
}
.test-regexp {
  display: none;
  height: var(--input-height);
}
.has-regexp .test-regexp {
  display: inline-block;
}
.regexp-report summary {
  cursor: pointer;
}
.regexp-report mark {
  background-color: rgba(255, 255, 0, .5);
}
.regexp-report details {
  margin-left: 1rem;
  word-break: break-all;
}
.regexp-report details {
  margin-bottom: 1rem;
}
.regexp-report summary {
  font-weight: bold;
  margin-left: -1rem;
  margin-bottom: .5rem;
  cursor: default;
  overflow-wrap: break-word;
}
.regexp-report details[data-type="full"] {
  color: darkgreen;
}
.regexp-report details[data-type="partial"] {
  color: var(--c65);
}
.regexp-report details[data-type="invalid"] {
  color: maroon;
}
.regexp-report details details {
  margin-left: 2rem;
  margin-top: .5rem;
}
.regexp-report details div {
  max-height: calc(100vh - 15rem);
  overflow-y: auto;
}
.regexp-report i {
  position: absolute;
  margin-top: -1px;
}
.regexp-report details div a {
  color: inherit;
  text-decoration: none;
  display: block;
  cursor: pointer;
}
.regexp-report details a:hover {
  text-decoration: underline;
}
.regexp-report details a img {
  width: 16px;
  max-height: 16px;
  vertical-align: middle;
  margin-right: .5em;
}
.regexp-report-note {
  color: var(--c60);
  min-width: fit-content;
  width: 0;
  hyphens: auto;
}
.regexp-report-note code {
  white-space: nowrap;
  font-weight: bold;
}
/************ help popup ************/
#help-popup {
  --pad-x: 1.5rem;
  --pad-y: 1rem;
  --pad-y2: calc(var(--pad-y) / 1.5);
  --top: 3rem;
  top: var(--top);
  right: 3rem;
  max-width: calc(100% - var(--header-width) - 6rem);
  position: fixed;
  background-color: var(--bg);
  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.5);
  z-index: 99;
}
#help-popup.big,
#help-popup.wide {
  max-width: 100%;
}
#help-popup.big {
  box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 0px 100000px !important;
  left: calc(var(--header-width) - 3rem);
}
#help-popup.big .CodeMirror {
  min-height: 2rem;
  height: 70vh;
}
#help-popup .title {
  font-weight: bold;
  background-color: rgba(128, 128, 128, .15);
  padding: var(--pad-y2) var(--pad-x);
}
#help-popup.danger .title {
  background-color: firebrick;
  color: white;
}
#help-popup.danger .dismiss {
  color: white;
}
#help-popup .contents {
  max-height: calc(100vh - var(--top) - 4rem);
  overflow-y: auto;
  padding: var(--pad-y) var(--pad-x);
}
#help-popup .dismiss {
  position: absolute;
  right: 0;
  top: 0;
  padding: var(--pad-y2) .5em;
  font-size: 14px;
}
#help-popup input[type="search"],
#help-popup .CodeMirror {
  margin: 3px;
}
#help-popup .keymap-list input[type="search"] {
  margin: 0 0 2px;
}
.keymap-list {
  font-size: 12px;
  padding: 0 3px 0 0;
  border-spacing: 0;
  word-break: break-all;
}
.keymap-list input {
  width: 100%;
}
.keymap-list tr:nth-child(odd) {
  background-color: rgba(0, 0, 0, 0.07);
}
.keymap-list td:first-child {
  white-space: nowrap;
  font-family: monospace;
  padding-right: 0.5rem;
}

#help-popup .buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: var(--pad-y2) 0 calc(var(--pad-y2) - var(--pad-y)) 0;
}
.non-windows #help-popup .buttons {
  direction: rtl;
  justify-content: start;
}
#help-popup button[name^="import"] {
  line-height: 1.5rem;
  pointer-events: none;
  opacity: 0.5;
}
#help-popup.ready button[name^="import"] {
  pointer-events: all;
  opacity: 1.0;
}
#help-popup .rules {
  padding: 0 15px;
}
#help-popup .rules li {
  padding-top: .5em;
}
#help-popup .rules p {
  margin: .25em 0;
}
#help-popup .buttons > :nth-child(n + 2) {
  margin: 0 0 0 .75rem;
}
.non-windows #help-popup .buttons > :nth-child(n + 2) {
  margin: 0 .5em 0 0;
}

/************ lint ************/
#lint {
  overflow-x: hidden;
}
#lint summary h2 {
  display: inline-flex;
}
#lint table {
  border-spacing: 0;
  line-height: 1.0;
  width: 100%;
  font-size: 85%;
  cursor: pointer;
}
#lint tr td:last-child {
  width: 100%;
}
#lint td[role="line"] {
  padding-left: 0.25rem;
}
/* ... */

